# gyronimo-tests

./: CMakeLists.txt  readme.md
apps/: orbit_helena.cc  orbit_vmec.cc
gyrotests/: guiding_centre_conversion.cc  guiding_centre_conversion.hh  odeint_lorentz.hh
